# dayforge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  deploy.sh  pyproject.toml  server.py  start.sh
data/: lan-week.json  schedule.json  topics-config.json
db/: connection.py  import_json.py  migrate.py
db/migrations/: 0001_initial.sql  0002_schedule_overrides.sql  0003_profile_fields.sql
db/queries/: habits.py  learning.py  overrides.py  profiles.py  schedule.py
docs/: architecture.md  deployment-steps.md
public/: index.html  quotes.json
